refactor: update project